--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 		/* implementation heavily influenced by http://bl.ocks.org/1166403 */
 
 		// define dimensions of graph
+    var data = [3, 6, 2, 7, 5, 2, 0, 3, 8, 9, 2, 5, 9, 3, 6, 3, 6, 2, 7, 5, 2, 1, 3, 8, 9, 2, 5, 9, 2, 7];
 		var m = [80, 80, 80, 80]; // margins
-		var w = 1000 - m[1] - m[3]; // width
-		var h = 400 - m[0] - m[2]; // height
+		var w = data.length*34 - m[1] - m[3]; // width
+		var h = Math.max(...data)*40 - m[0] - m[2]; // height
 
 		// create a simple data array that we'll plot with a line (this array represents only the Y values, X will just be the index location)
-		var data = [3, 6, 2, 7, 5, 2, 0, 3, 8, 9, 2, 5, 9, 3, 6, 3, 6, 2, 7, 5, 2, 1, 3, 8, 9, 2, 5, 9, 2, 7];
 
 		// X scale will fit all values from data[] within pixels 0-w
 		var x = d3.scale.linear().domain([0, data.length]).range([0, w]);
@@ -58,6 +58,7 @@
 
 		// create a line function that can convert data[] into x and y points
 		var line = d3.svg.line()
+      .interpolate("cardinal")
 			// assign the X function to plot our line as we wish
 			.x(function(d,i) {
 				// verbose logging to show what's actually being done
