--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
 	<script>
 		/* implementation heavily influenced by http://bl.ocks.org/1166403 */
 
-		// define dimensions of graph
-    var data = [3, 6, 2, 7, 5, 2, 0, 3, 8, 9, 2, 5, 9, 3, 6, 3, 6, 2, 7, 5, 2, 1, 3, 8, 9, 2, 5, 9, 2, 7];
+    // create a simple data array that we'll plot with a line (this array represents only the Y values, X will just be the index location)
+    var data = [3, 6, 2, 7, 5, 2, 0, 3, 8, 20, 2, 5, 9, 3, 6, 3, 6, 2, 7, 5, 2, 1, 3, 8, 9, 2, 5, 9, 2, 7];
+    // define dimensions of graph
 		var m = [80, 80, 80, 80]; // margins
-		var w = data.length*34 - m[1] - m[3]; // width
-		var h = Math.max(...data)*40 - m[0] - m[2]; // height
+		var w = data.length * 34 - m[1] - m[3]; // width
+		var h = Math.max(...data) * 40 - m[0] - m[2]; // height
 
-		// create a simple data array that we'll plot with a line (this array represents only the Y values, X will just be the index location)
 
 		// X scale will fit all values from data[] within pixels 0-w
 		var x = d3.scale.linear().domain([0, data.length]).range([0, w]);
 		// Y scale will fit values from 0-10 within pixels h-0 (Note the inverted domain for the y-scale: bigger is up!)
-		var y = d3.scale.linear().domain([0, 10]).range([h, 0]);
+		var y = d3.scale.linear().domain([0, Math.max(...data)]).range([h, 0]);
 			// automatically determining max range can work something like this
 			// var y = d3.scale.linear().domain([0, d3.max(data)]).range([h, 0]);
 
@@ -62,13 +62,13 @@
 			// assign the X function to plot our line as we wish
 			.x(function(d,i) {
 				// verbose logging to show what's actually being done
-				console.log('Plotting X value for data point: ' + d + ' using index: ' + i + ' to be at: ' + x(i) + ' using our xScale.');
+				// console.log('Plotting X value for data point: ' + d + ' using index: ' + i + ' to be at: ' + x(i) + ' using our xScale.');
 				// return the X coordinate where we want to plot this datapoint
 				return x(i);
 			})
 			.y(function(d) {
 				// verbose logging to show what's actually being done
-				console.log('Plotting Y value for data point: ' + d + ' to be at: ' + y(d) + " using our yScale.");
+				// console.log('Plotting Y value for data point: ' + d + ' to be at: ' + y(d) + " using our yScale.");
 				// return the Y coordinate where we want to plot this datapoint
 				return y(d);
 			})
