--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
 		/* implementation heavily influenced by http://bl.ocks.org/1166403 */
 
     // create a simple data array that we'll plot with a line (this array represents only the Y values, X will just be the index location)
-    var data = [3, 6, 2, 7, 5, 2, 0, 3, 8, 20, 2, 5, 9, 3, 6, 3, 6, 2, 7, 5, 2, 1, 3, 8, 9, 2, 5, 9, 2, 7];
+    var data = [[0, 8], [1, 4], [3, 2], [5, 2], [6, 2], [9, 2]];//, 0, 3, 8, 9, 2, 5, 9, 3, 6, 3, 6, 2, 7, 5, 2, 1, 3, 8, 9, 2, 5, 9, 2, 7];
     // define dimensions of graph
 		var m = [80, 80, 80, 80]; // margins
-		var w = data.length * 34 - m[1] - m[3]; // width
-		var h = Math.max(...data) * 40 - m[0] - m[2]; // height
+		var w = Math.max(...data[0]) * 100 //- m[1] - m[3]; // width
+		var h = Math.max(...data[1]) * 40 //- m[0] - m[2]; // height
 
 
 		// X scale will fit all values from data[] within pixels 0-w
 		var x = d3.scale.linear().domain([0, data.length]).range([0, w]);
 		// Y scale will fit values from 0-10 within pixels h-0 (Note the inverted domain for the y-scale: bigger is up!)
-		var y = d3.scale.linear().domain([0, Math.max(...data)]).range([h, 0]);
+		var y = d3.scale.linear().domain([0, Math.max(...data[1])]).range([h, 0]);
 			// automatically determining max range can work something like this
 			// var y = d3.scale.linear().domain([0, d3.max(data)]).range([h, 0]);
 
@@ -64,13 +64,13 @@
 				// verbose logging to show what's actually being done
 				// console.log('Plotting X value for data point: ' + d + ' using index: ' + i + ' to be at: ' + x(i) + ' using our xScale.');
 				// return the X coordinate where we want to plot this datapoint
-				return x(i);
+				return x(d[0]);
 			})
 			.y(function(d) {
 				// verbose logging to show what's actually being done
 				// console.log('Plotting Y value for data point: ' + d + ' to be at: ' + y(d) + " using our yScale.");
 				// return the Y coordinate where we want to plot this datapoint
-				return y(d);
+				return y(d[1]);
 			})
 
 			// Add an SVG element with the desired dimensions and margin.
