--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 ];//, 0, 3, 8, 9, 2, 5, 9, 3, 6, 3, 6, 2, 7, 5, 2, 1, 3, 8, 9, 2, 5, 9, 2, 7];
     // define dimensions of graph
 		var m = [80, 80, 80, 80]; // margins
-		var w = findW(data) / 50; //- m[1] - m[3]; // width
-		var h = findH(data) + 500; //- m[0] - m[2]; // height
+		var w = 800; //- m[1] - m[3]; // width
+		var h = 400; //- m[0] - m[2]; // height
 
     function findW(data){
       var maxW = 0;
