--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		var w = 800; //- m[1] - m[3]; // width
 		var h = 400; //- m[0] - m[2]; // height
 
-    function findW(data){
+    function findMaxW(data){
       var maxW = 0;
       for (var i = 0; i < data.length; i++){
         if (data[i][0] > maxW){
@@ -72,7 +72,7 @@
       return maxW;
     };
 
-    function findH(data){
+    function findMaxH(data){
       var maxH = 0;
       for (var i = 0; i < data.length; i++){
         if (data[i][1] > maxH){
@@ -83,9 +83,9 @@
     }
 
 		// X scale will fit all values from data[] within pixels 0-w
-		var x = d3.scale.linear().domain([0, findW(data)]).range([0, w]);
+		var x = d3.scale.linear().domain([0, findMaxW(data)]).range([0, w]);
 		// Y scale will fit values from 0-10 within pixels h-0 (Note the inverted domain for the y-scale: bigger is up!)
-		var y = d3.scale.linear().domain([0, findH(data)]).range([h, 0]);
+		var y = d3.scale.linear().domain([.4, findMaxH(data)]).range([h, 0]);
 			// automatically determining max range can work something like this
 			// var y = d3.scale.linear().domain([0, d3.max(data)]).range([h, 0]);
 
